<resources>
    <string name="app_name">SprintFinalM6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_holder">There will be a text here.</string>
    <string name="name_holder">Name</string>
    <string name="price_holder">Price</string>
    <string name="current_price">Current price</string>
    <string name="description_holder">Description</string>
    <string name="last_price">Last price</string>
    <string name="credit_holder">Credit</string>
    <string name="content_fab">Icono mensaje correo electrónico</string>
    <string name="credit_true">Acepta crédito</string>
    <string name="credit_false">Sólo efectivo</string>
    <string name="previous_price">Antes $ %1$d</string>
    <string name="current_price_value">Ahora $ %1$d</string>
    <string name="description_title">Características: \n \n %1$s</string>
    <string name="send_email_to">info@novaera.cl</string>




</resources>