<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.details.DetailsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/my_toolbar_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="Detalles"
        app:titleTextAppearance="@style/toolbar_text_style" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        android:id="@+id/scrollView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNameDt"
                style="@style/bold_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/name_holder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imgPhoneDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNameDt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtPriceDt"
                style="@style/medium_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/current_price"
                app:layout_constraintBottom_toBottomOf="@+id/imgPhoneDt"
                app:layout_constraintEnd_toEndOf="@+id/txtLastPriceDt"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtLastPriceDt"
                app:layout_constraintTop_toBottomOf="@+id/txtLastPriceDt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtDescriptionDt"
                style="@style/gral_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/description_holder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPhoneDt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtLastPriceDt"
                style="@style/gral_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/last_price"
                app:layout_constraintBottom_toBottomOf="@+id/imgPhoneDt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgPhoneDt"
                app:layout_constraintTop_toTopOf="@+id/imgPhoneDt"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/txtCreditDt"
                style="@style/gral_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/credit_holder"
                app:layout_constraintBottom_toBottomOf="@+id/imgPhoneDt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgPhoneDt"
                app:layout_constraintTop_toBottomOf="@+id/txtPriceDt" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_fab"
                android:src="@drawable/baseline_attach_email_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescriptionDt"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>